--- a/DuOSU/chrome/DuOSU/welcome.html
+++ b/DuOSU/chrome/DuOSU/welcome.html
@@ -61,7 +61,7 @@
     <div id="tutorialDiv">
       <img id="tutorial" src="images/tutorial.gif" width="300px">
       <h3>Find DuOSU and flip through the instructions with the arrow keys.</h3>
-      <h3><b>Can't find the Duo devices website?</b><br>Try googling your organization's name followed by "duo devices" to find it.</h3>
+      <h3><b>Can't find the Duo devices website?</b><br>Try googling your organization's name followed by "duo devices".</h3>
     </div>
   </body>
   <script src="welcome.js"></script>
