--- a/chrome/DuOSU/popup.html
+++ b/chrome/DuOSU/popup.html
@@ -267,10 +267,13 @@
         margin-bottom: 2px;
       }
       #successDetails {
-        font-size: 10px;
-        margin-left: 15%;
-        margin-right: 15%;
-        margin-bottom: 15px;
+        font-size: 12px;
+        margin-left: 5%;
+        margin-right: 5%;
+        text-align: left;
+        border: 1px solid;
+        border-radius: 10px;
+        padding: 10px;
       }
       #failedReason {
         text-decoration: underline;
